--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -37,8 +37,9 @@ try {
               </a>
             ))}
             </div>
-        </div>
+      <Footer/>
       </div>
     </div>
+
   </body>
 </html>
