--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const posts = await getCollection('blog');
             <div class='text-neutral-300'>yo, i'm 20 y/o <span class='font-medium'>software engineer</span> based in India, going to uni, studying cs and playing ukulele on the side.
               i love learning new languages, how computer works.</div>
           </div>
-          <div class='text-neutral-300'>right now, i'm trying to learn assembly and c. i use <span class='font-medium'>vim </span>btw.</div>
+          <div class='text-neutral-300'>right now, i'm trying to learn assembly and functional programming (haskell). i use <span class='font-medium'>vim </span>btw.</div>
         </div>
 
         <div class='text-neutral-300 mt-16'>
